# PauliStringsQuantumCircuitSimulations

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: CI.yml  deploy-docs.yml  tests.yml
docs/: api.md  index.md
site/: 404.html  index.html  objects.inv
src/paulistringsquantumcircuitsimulations/: .txt  __init__.py  circuit.py  exceptions.py  exported.py  heisenbergsimulator.py  observable.py  openfermin_utils.py  paulioperator.py  paulioperators.py  utils.py
src/paulistringsquantumcircuitsimulations/__pycache__/: utils.pack_bits-6.py312.1.nbc  utils.pack_bits-6.py312.nbi  utils.pack_bits-8.py312.1.nbc  utils.pack_bits-8.py312.nbi
src/sparsepaulicircuitsimulation/: __init__.py
tests/: test_circuit.py  test_heisenbergsimulator.py  test_init.py  test_observable.py  test_paulioperator.py
