[project]
name = "PauliStringQuantumCircuitSimulation"
version = "0.1.0"
description = "Quantum Circuit Simulation based on the Sparse Pauli technique"
authors = [
    { name = "Ryo Watanabe", email = "ryo0616mani@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "jax>=0.4.13",
    "pytest>=8.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
