[project]
name = "paulistringsquantumcircuitsimulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "watayo", email = "ryo0616mani@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.5.2",
    "numpy>=1.24.0",
    "optax>=0.2.4",
    "stim>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings-python>=1.16.5",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint, mypy, py312

[testenv]
deps = pytest
commands =
    pytest tests

[testenv:lint]
deps = ruff
commands =
    ruff check --fix
    ruff format

[testenv:mypy]
deps = mypy
commands = mypy src tests --ignore-missing-imports --strict-optional --disallow-untyped-defs
"""
